<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeadSpace</string>
    <string name="navigation">Навигация</string>
    <string name="currentDateDay">30</string>
    // текущий день
    <string name="currentDateMonth">июня</string>
    // текущий месяц (буквами)
    <string name="currentDayOfWeek">среда</string>
    // текущий месяц (буквами)
    <string name="lowerWeek">нижняя</string>
    // нижняя неделя
    <string name="upperWeek">верхняя</string>
    // верхняя неделя
    <string name="week">неделя</string>
    // неделя
    <string name="number">2</string>
    // номер пары
    <string name="lesson">пара</string>
    // пара
    <string name="enterGroupNumber">Группа:</string>
    // ввод номера группы
    <string name="schedule">Расписание</string>
    <string name="title_activity_deadlines">DeadlinesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_test">TestActivity</string>
    // вкладка расписание

    //время текущей пары на главном экране
    <string name="pair_time_counter">%1$s-%2$s</string>
    //показ текущей даты + "Сегодня"
    <string name="current_date_text">Сегодня %1$s</string>


    //ошибки
    //сообщение об ошибке добавления дедлайна
    <string name="deadline_add_error">Такой дедлайн уже есть</string>
    //сообщение об ошибке загрузки своего расписания во время поиска
    <string name="load_user_schedule_error">У вас нет своего расписания для этой группы. Будет загружено с интернета</string>
    //сообщение об ошибке добовления пары
    <string name="add_pair_error">Пара в такое время уже есть</string>
    //сообщение об ошибке подключения к интернету
    <string name="no_internet_connection">Нет подключения к интернету</string>
    //сообщение о некорректном вводе
    <string name="incorrect_input">Некорректный ввод</string>
    //ошибка при добавлении к пустому расписанию
    <string name="add_pair_to_nothing_error_mes">А куда ты добавлять собрался?</string>

    //предупреждения
    //удаление пары
    <string name="delete_pair">Удалить пару?</string>
    //удаление пользовательского расписания
    <string name="delete_users_schedule">Удалить расписание для текущей группы?</string>
</resources>