<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Расписание зачетов"
            android:textColor="@color/suai_dark_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/Right_arrow"
            android:layout_width="12dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/right_arrow"
            android:layout_marginTop="0dp"
            android:layout_marginStart="15dp"
            android:scaleType="fitStart"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:onClick="onClickBackExam"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/EnterGroupNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/enterGroupNumber"
            android:layout_alignParentStart="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="-20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="..." />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dfghjk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/background_kalendar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/CurrentDateDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:text="@string/currentDateDay"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/CurrentDateMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="@+id/CurrentDateDay"
                android:layout_marginStart="195dp"
                android:text="@string/currentDateMonth"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

    </RelativeLayout>

        <LinearLayout
            android:id="@+id/big_exam_list"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="10">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exam_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginHorizontal="3dp"
                app:layout_constraintTop_toBottomOf="@id/big_exam_list"
                tools:listitem="@layout/exams_list_item"/>

        </LinearLayout>

</LinearLayout>