<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Расписание занятий"
            android:textColor="@color/suai_dark_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/Right_arrow"
            android:layout_width="12dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/right_arrow"
            android:layout_marginTop="0dp"
            android:layout_marginStart="25dp"
            android:scaleType="fitStart"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:onClick="ClickBackListRasp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/EnterGroupNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/enterGroupNumber"
            android:layout_alignParentStart="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="-20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="..." />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/is_users_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_input"
        android:layout_gravity="center"
        android:text="Ваше расписание" />

    <RelativeLayout
        android:id="@+id/dfghjk"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/CurrentDateDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/currentDateDay"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/CurrentDateMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:text="@string/currentDateMonth"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerVertical="true" />



        <ImageButton
            android:id="@+id/imageView_2"
            android:layout_width="100dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/background_of_red_week"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/name_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:text="верхняя"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:text="неделя"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/days_of_week"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@color/suai_dark_blue">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Пн"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Вт"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Ср"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Чт"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Пт"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Сб"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/all_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="..."
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

            <LinearLayout
                android:id="@+id/big_pair_list"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="10">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pair_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginHorizontal="3dp"
                    app:layout_constraintTop_toBottomOf="@id/big_pair_list"
                    tools:listitem="@layout/schedule_list_item"/>

            </LinearLayout>

</LinearLayout>